# luna-rewards

./: .gitignore  Cargo.toml  README.md  get_comp.sh
data/: pfc-2021-12-06.json  pfc-2021-12-13.json  pfc-2021-12-20.json  pfc-2021-12-27.json  pfc-2022-01-03.json  pfc-2022-01-10.json
results/: winners.json
src/: main.rs
