[package]
name = "validator-competition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_seeder = "0.2.2"
rand_core = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0.68"
env_logger = "0.8.3"
log="0.4"
dotenv="0.15.0"
chrono = "0.4.19"